--- a/JDBC/src/druid.properties
+++ b/JDBC/src/druid.properties
@@ -1,4 +1,4 @@
-user=root
-password=chezijie
 url=jdbc:mysql://localhost:3306/jdbc_learn?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-driverClass=com.mysql.cj.jdbc.Driver
+username=root
+password=chezijie
+driverClassName=com.mysql.cj.jdbc.Driver
